add codes for gradient visualization

--- a/Evol_ReducedDim_Analysis.ipynb
+++ b/Evol_ReducedDim_Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -146,61 +146,70 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Exp 0\t Alfa64chan-10032020-001\t 200310_Alfa_rfMapper_basic\n",
-      "001 RF Mapping\n",
-      "[0 0 ] 0.75 deg -1.5:1.5\n",
-      "Ch 8 seems a good one\n",
-      "4 mins 5 blocks\n",
+      "Exp 0\t Beto-11032020-001\t 200311_Beto_rfMapper_basic\n",
+      "001 starts 12:49\n",
+      "RFMapping  -8:2:8  2 deg,\n",
+      "2cv\n",
+      "Completed\n",
       "\n",
-      "Exp 1\t Alfa64chan-10032020-002\t 200310_Alfa_rfMapper_basic(1)\n",
-      "002 RF Mapping\n",
-      "[0 0 ] 2 deg -8:2:8\n",
-      "Bigger image rf mapping\n",
-      "Center starts to appear\n",
-      "8 mins 7 blocks\n",
+      "Exp 1\t Beto-11032020-002\t 200311_Beto_rfMapper_basic(1)\n",
+      "002  starts\n",
+      "6mins\n",
+      "RFMapping  -1.5:.5:1.5 0.75 deg,\n",
+      "Completed\n",
       "\n",
-      "Exp 2\t Alfa64chan-10032020-003\t 200310_Alfa_generate_integrated(1)\n",
-      "003 Generate Integrated starts 13:50\n",
-      "13 [-0.8 -1.3 ] CMAES\n",
-      "13 [-0.8 -1.3 ] ZOHA_Sphere_lr\n",
-      "Lr schedule, 70deg to 7.33 deg in 100 generations.\n",
-      "Optimizer compare\n",
-      "CMAES and ZOHA all struggle to take off\n",
-      "Maybe this is too noisy….. Should choose a cleaner signal than this\n",
-      "15 mins finish 20 blocks of parallel evolution….Works like machine\n",
-      "Neither is successful.… cannot say anything\n",
+      "Exp 2\t Beto-11032020-003\t 200311_Beto_generate_integrated\n",
+      "003 starts  13:16\n",
+      "IT channel\n",
+      "30 [-0.6 1] 3 1 CMAES\n",
+      "30 [-0.6 1] 3 1 ZOHA_Sphere_lr\n",
+      "30 is a Really Hashy unit\n",
+      "See what happens\n",
+      "Decrease the convergence rate, decay from 50 to 7.33 deg at 100 generations instead of 50 generations (Slower decay facilitate exploration ~ 40 gens. )\n",
+      "ZOHA_Sphere is doing really well! Outperform CMAES early on.\n",
+      "At about gen 25 the 2 evolution crossed and seems CMAES starts to get more spike esp. later sustained spikes. (probablu the norm is higher )\n",
+      "At gen 30 the exploration is around 28.5 deg and the mean response is higher than ZOHA\n",
+      "Sigma is 2.66, 2.33\n",
+      "Exploration mu is 28\n",
+      "Maybe we still decay too fast?\n",
+      "Or we really needs a high norm to get the neuron interested.\n",
+      "At generation 36,\n",
+      "Sigma = 2.36\n",
+      "Spherical Exploration range = 25.9 deg \n",
+      "Spherical's step size is too small at this point, we are inferior\n",
+      "Should use inverse function decay instead of exponential decay?\n",
+      "Step 37\n",
+      "Sigma 2.35\n",
+      "Sphere degree 23.9\n",
+      "ZOHA_Sphere_lr seems to be worse at after evolving for a while,\n",
+      "Recorded the Matlab output! See we can reconstruct the sample diversity curve post hoc.\n",
+      "Random thoughts:\n",
+      "What's neuronal noise? How can that help or hinder evolution. Can we think about Hash as a weighted sum of a bunch of neurons with similar but different selectivity?\n",
+      "45 gens for 58mins!\n",
+      "Super Informative!\n",
+      "Completed\n",
       "\n",
-      "Exp 3\t Alfa64chan-10032020-004\t 200310_Alfa_generate_integrated(2)\n",
-      "004 Generate Integrated Starts 14:12\n",
-      "8 [-0 -0 ] 1 CMAES\n",
-      "8 [-0 -0 ] 1 ZOHA_Sphere_lr\n",
-      "According to the ref images, it really likes black white grating things.\n",
-      "Cant see eye, close out after this one.\n",
-      "Note the response onset is pretty late! ~ 100ms\n",
-      "22min 23 blocks~\n",
-      "Terminate around 30, see if we can do better\n",
+      "Exp 3\t Beto-11032020-004\t 200311_Beto_generate_integrated(1)\n",
+      "004 starts  14:19\n",
+      "30 [-0.6 1] 3 1 CMAES\n",
+      "30 [-0.6 1] 3 1 ZOHA_Sphere_lr\n",
+      "Exactly same as 003, but just change the decay rate of ZOHA_Sphere_lr to be linear instead of exponential, see slower decay will facilitate exploration at around 20-40 gens.\n",
+      "However, neither CMA nor ZOHA evolves ~ 18 gens, not that informative.\n",
+      "Actually the step size should be a function of evolving score! Not a function of generations. As many generations passed but score doesn't change much then you shouldn't tune your step size, you have to keep trying and moving.\n",
+      "Completed, not very informative\n",
       "\n",
-      "Exp 4\t Alfa64chan-10032020-005\t 200310_Alfa_generate_integrated(3)\n",
-      "005 Generate Integrated Starts 14:48\n",
-      "20 [-0 -3.5 ] 1 CMAES\n",
-      "20 [-0 -3.5 ] 1 ZOHA_Sphere_lr\n",
-      "Used the reference from last GI…..PSTH looks health and good!\n",
-      "Response is healthy but the Score isn't going up very well…. Stays the same basically.\n",
-      "Seems CMAES goes up around 15 gens, not significantly but good. ZOHA is always fluctuating.\n",
-      "ZOHA beat by CMAES!\n",
-      "40 mins\n",
-      "\n",
-      "Exp 5\t Alfa64chan-10032020-006\t 200310_Alfa_generate_integrated(4)\n",
-      "006 Generate Integrated starts 15:29\n",
-      "48  [-0.2 -0.4 ] 1 CMAES\n",
-      "48  [-0.2 -0.4 ] 1 ZOHA_Sphere_lr\n",
-      "Maybe we should try a simple cell in V1 V4 to see if anything is working or not .\n",
-      "Health transient response of V1\n",
-      "2 optimizers go up and down consistently\n",
-      "25 mins 11 blocks.\n",
-      "CMA-ES evolves a second peak!!! Insane! Will be interesting to see if there is any correlated signal in the 2nd peak.\n",
-      "16 gens the 2nd peak evolve even greater!\n",
-      "40 mins 16 blocks\n"
+      "Exp 4\t Beto-11032020-005\t 200311_Beto_generate_integrated(2)\n",
+      "005 starts 14:52\n",
+      "20 [-0.6 1] 3 1 CMAES\n",
+      "20 [-0.6 1] 3 1 ZOHA_Sphere_lr\n",
+      "Linear decay from 50 to 7.33 in 100 generations, facilitates exploration.\n",
+      "Finally try a unit with more signal. (PSTH looks super healthy! Low baseline high response.)\n",
+      "(Eye signal lose again. Have to recalibrate from time to time. )\n",
+      "In gen 8, gen 9 the scores of 2 optimizers goes up together. Quite correlated~ Seems promissing\n",
+      "Add 100mL to finish this up.\n",
+      "Around gen 12 CMA starts to look better than ZOHA, not sure why. Have to look deeper into both.\n",
+      "Is that true that linear exploration is easier to memorize the evolved features than the Spherical one.\n",
+      "Completed, quite informative\n"
      ]
     },
     {
@@ -234,33 +243,38 @@
     }
    ],
    "source": [
-    "Animal = \"Alfa\" # \"Alfa\" \"ALfa\"\n",
-    "df_sort = process_concat_cells(r\"D:\\ExpRecord_tmp.xlsx\", \"D:\\ExpRecord_out.xlsx\", animal=\"Beto\")"
+    "Animal = \"Beto\" # \"Alfa\" \"ALfa\"\n",
+    "df_sort = process_concat_cells(r\"D:\\ExpRecord_tmp.xlsx\", \"D:\\ExpRecord_out.xlsx\", animal=Animal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  app.launch_new_instance()\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:17: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=True'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass sort=False\n",
-      "\n"
+      "200311_Beto_rfMapper_basic  has been recorded in the excel index 166, please check\n",
+      "200311_Beto_rfMapper_basic(1)  has been recorded in the excel index 167, please check\n",
+      "200311_Beto_generate_integrated  has been recorded in the excel index 168, please check\n",
+      "200311_Beto_generate_integrated(1)  has been recorded in the excel index 169, please check\n",
+      "200311_Beto_generate_integrated(2)  has been recorded in the excel index 170, please check\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-5602390f05d5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32melif\u001b[0m \u001b[0mAnimal\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"Alfa\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mtable_old\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mr\"S:\\Exp_Record_Alfa.xlsx\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdf_cat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconcat_table\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtable_old\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34mr\"D:\\ExpRecord_out.xlsx\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maddexplabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Optim_tuning\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-37-cc6303ff077a>\u001b[0m in \u001b[0;36mconcat_table\u001b[1;34m(df_old, df_new, addexplabel, out_path)\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mbreak_flag\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mbreak_flag\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0maddexplabel\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mdf_new\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mExp_collection\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maddexplabel\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: "
      ]
     }
    ],
