--- a/Evol_Record_Manage.ipynb
+++ b/Evol_Record_Manage.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -146,61 +146,61 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Exp 0\t Alfa64chan-10032020-001\t 200310_Alfa_rfMapper_basic\n",
-      "001 RF Mapping\n",
-      "[0 0 ] 0.75 deg -1.5:1.5\n",
-      "Ch 8 seems a good one\n",
-      "4 mins 5 blocks\n",
+      "Exp 0\t Alfa64chan-17032020-001\t 200317_Alfa_rfMapper_basic\n",
+      "001 RF MAPPER start at 1:27\n",
+      "2 degrees, looking at SU in ch. 3, very sparse…\n",
+      "Doesn’t seen visually responsive, we will try bigger.\n",
+      "Or ch 31. looks good\n",
+      "5 blocks complete, at 132\n",
+      "Completed\n",
       "\n",
-      "Exp 1\t Alfa64chan-10032020-002\t 200310_Alfa_rfMapper_basic(1)\n",
-      "002 RF Mapping\n",
-      "[0 0 ] 2 deg -8:2:8\n",
-      "Bigger image rf mapping\n",
-      "Center starts to appear\n",
-      "8 mins 7 blocks\n",
+      "Exp 1\t Alfa64chan-17032020-002\t 200317_Alfa_rfMapper_basic(1)\n",
+      "002 Rf mapper start at 1:35. 0.75 degrees\n",
+      "5 complete stop at 1:38 ish\n",
+      "Completed\n",
       "\n",
-      "Exp 2\t Alfa64chan-10032020-003\t 200310_Alfa_generate_integrated(1)\n",
-      "003 Generate Integrated starts 13:50\n",
-      "13 [-0.8 -1.3 ] CMAES\n",
-      "13 [-0.8 -1.3 ] ZOHA_Sphere_lr\n",
-      "Lr schedule, 70deg to 7.33 deg in 100 generations.\n",
-      "Optimizer compare\n",
-      "CMAES and ZOHA all struggle to take off\n",
-      "Maybe this is too noisy….. Should choose a cleaner signal than this\n",
-      "15 mins finish 20 blocks of parallel evolution….Works like machine\n",
-      "Neither is successful.… cannot say anything\n",
+      "Exp 2\t Alfa64chan-17032020-003\t 200317_Alfa_generate_integrated(2)\n",
+      "003 Generate integrated start at 1:45\n",
+      "Ch. 31, whole channel, just hash\n",
+      "31 [0 -3.5]  4 1 'CMAES'\n",
+      "Didn’t seem to go anywhere\n",
+      "25 blocks complete stop at 159\n",
+      "Completed\n",
       "\n",
-      "Exp 3\t Alfa64chan-10032020-004\t 200310_Alfa_generate_integrated(2)\n",
-      "004 Generate Integrated Starts 14:12\n",
-      "8 [-0 -0 ] 1 CMAES\n",
-      "8 [-0 -0 ] 1 ZOHA_Sphere_lr\n",
-      "According to the ref images, it really likes black white grating things.\n",
-      "Cant see eye, close out after this one.\n",
-      "Note the response onset is pretty late! ~ 100ms\n",
-      "22min 23 blocks~\n",
-      "Terminate around 30, see if we can do better\n",
+      "Exp 3\t Alfa64chan-17032020-004\t 200317_Alfa_generate_integrated(3)\n",
+      "004 generate integrated start at 200\n",
+      "Ch 21, whole ch, just hash seems responsive\n",
+      "21 [0 -1.5] 4 1 'CMAES'\n",
+      "Block 21, still looks to be climbing\n",
+      "Stop at block 31, 2:18\n",
+      "Completed\n",
       "\n",
-      "Exp 4\t Alfa64chan-10032020-005\t 200310_Alfa_generate_integrated(3)\n",
-      "005 Generate Integrated Starts 14:48\n",
-      "20 [-0 -3.5 ] 1 CMAES\n",
-      "20 [-0 -3.5 ] 1 ZOHA_Sphere_lr\n",
-      "Used the reference from last GI…..PSTH looks health and good!\n",
-      "Response is healthy but the Score isn't going up very well…. Stays the same basically.\n",
-      "Seems CMAES goes up around 15 gens, not significantly but good. ZOHA is always fluctuating.\n",
-      "ZOHA beat by CMAES!\n",
-      "40 mins\n",
+      "Exp 4\t Alfa64chan-17032020-005\t 200317_Alfa_generate_integrated(4)\n",
+      "005 Start at 2:20\n",
+      "Ch 21, whole ch, just hash seems responsive\n",
+      "21 [0 -1.5] 4 1 'ZOHA_Sphere_euclid_lr'\n",
+      "Mu exponential decay from 50 deg to 5 deg in 100 generations, learning rate 1.5\n",
+      "Reward upped to 60\n",
+      "Block 18, still climbing\n",
+      "Stopped after 22 blocks, at 235\n",
+      "Completed\n",
       "\n",
-      "Exp 5\t Alfa64chan-10032020-006\t 200310_Alfa_generate_integrated(4)\n",
-      "006 Generate Integrated starts 15:29\n",
-      "48  [-0.2 -0.4 ] 1 CMAES\n",
-      "48  [-0.2 -0.4 ] 1 ZOHA_Sphere_lr\n",
-      "Maybe we should try a simple cell in V1 V4 to see if anything is working or not .\n",
-      "Health transient response of V1\n",
-      "2 optimizers go up and down consistently\n",
-      "25 mins 11 blocks.\n",
-      "CMA-ES evolves a second peak!!! Insane! Will be interesting to see if there is any correlated signal in the 2nd peak.\n",
-      "16 gens the 2nd peak evolve even greater!\n",
-      "40 mins 16 blocks\n"
+      "Exp 5\t Alfa64chan-17032020-006\t 200317_Alfa_generate_integrated(5)\n",
+      "006 start 2:40\n",
+      "Ch 21\n",
+      "21 [0 -1.5] 4 1 'ZOHA_Sphere_euclid_lr'\n",
+      "Try the new Inverse function decay of mu! Decay from 70-20 degree.\n",
+      "Evolution goes pretty well! Even better than the last 2 exponential decay ones.\n",
+      "Was going to stop but looks like its still going\n",
+      "Okay stopped at 258, 26 blocks\n",
+      "Completed\n",
+      "\n",
+      "Exp 6\t Alfa64chan-17032020-007\t 200317_Alfa_generate_integrated(6)\n",
+      "007 start at 302\n",
+      "Ch 21 [0 -1.5] 4 1 'ZOHA_Sphere_lr euclid_ReducDim'\n",
+      "Exactly same setting with last one, just restricted to a 50D subspace!\n",
+      "Starting to take breaks, upped reward to 160 +25\n",
+      "Completed\n"
      ]
     },
     {
@@ -240,7 +240,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ephysFN</th>\n",
+       "      <th>expControlFN</th>\n",
+       "      <th>stimuli</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>Exp_collection</th>\n",
+       "      <th>Expi</th>\n",
+       "      <th>pref_chan</th>\n",
+       "      <th>stim_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alfa64chan-17032020-001</td>\n",
+       "      <td>200317_Alfa_rfMapper_basic</td>\n",
+       "      <td>N:\\Stimuli\\2019-06-RF-mapping\\2020-03-17-Alfa</td>\n",
+       "      <td>001 RF MAPPER start at 1:27\\n2 degrees, lookin...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alfa64chan-17032020-002</td>\n",
+       "      <td>200317_Alfa_rfMapper_basic(1)</td>\n",
+       "      <td>N:\\Stimuli\\2019-06-RF-mapping\\2020-03-17-Alfa</td>\n",
+       "      <td>002 Rf mapper start at 1:35. 0.75 degrees\\n5 c...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alfa64chan-17032020-003</td>\n",
+       "      <td>200317_Alfa_generate_integrated(2)</td>\n",
+       "      <td>N:\\Stimuli\\2019-12-Evolutions\\2020-03-17-Alfa-...</td>\n",
+       "      <td>003 Generate integrated start at 1:45\\nCh. 31,...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alfa64chan-17032020-004</td>\n",
+       "      <td>200317_Alfa_generate_integrated(3)</td>\n",
+       "      <td>N:\\Stimuli\\2019-12-Evolutions\\2020-03-17-Alfa-...</td>\n",
+       "      <td>004 generate integrated start at 200\\nCh 21, w...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alfa64chan-17032020-005</td>\n",
+       "      <td>200317_Alfa_generate_integrated(4)</td>\n",
+       "      <td>N:\\Stimuli\\2019-12-Evolutions\\2020-03-17-Alfa-...</td>\n",
+       "      <td>005 Start at 2:20\\nCh 21, whole ch, just hash ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Alfa64chan-17032020-006</td>\n",
+       "      <td>200317_Alfa_generate_integrated(5)</td>\n",
+       "      <td>N:\\Stimuli\\2019-12-Evolutions\\2020-03-17-Alfa-...</td>\n",
+       "      <td>006 start 2:40\\nCh 21\\n21 [0 -1.5] 4 1 'ZOHA_S...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Alfa64chan-17032020-007</td>\n",
+       "      <td>200317_Alfa_generate_integrated(6)</td>\n",
+       "      <td>N:\\Stimuli\\2019-12-Evolutions\\2020-03-17-Alfa-...</td>\n",
+       "      <td>007 start at 302\\nCh 21 [0 -1.5] 4 1 'ZOHA_Sph...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   ephysFN                        expControlFN  \\\n",
+       "0  Alfa64chan-17032020-001          200317_Alfa_rfMapper_basic   \n",
+       "1  Alfa64chan-17032020-002       200317_Alfa_rfMapper_basic(1)   \n",
+       "2  Alfa64chan-17032020-003  200317_Alfa_generate_integrated(2)   \n",
+       "3  Alfa64chan-17032020-004  200317_Alfa_generate_integrated(3)   \n",
+       "4  Alfa64chan-17032020-005  200317_Alfa_generate_integrated(4)   \n",
+       "5  Alfa64chan-17032020-006  200317_Alfa_generate_integrated(5)   \n",
+       "6  Alfa64chan-17032020-007  200317_Alfa_generate_integrated(6)   \n",
+       "\n",
+       "                                             stimuli  \\\n",
+       "0      N:\\Stimuli\\2019-06-RF-mapping\\2020-03-17-Alfa   \n",
+       "1      N:\\Stimuli\\2019-06-RF-mapping\\2020-03-17-Alfa   \n",
+       "2  N:\\Stimuli\\2019-12-Evolutions\\2020-03-17-Alfa-...   \n",
+       "3  N:\\Stimuli\\2019-12-Evolutions\\2020-03-17-Alfa-...   \n",
+       "4  N:\\Stimuli\\2019-12-Evolutions\\2020-03-17-Alfa-...   \n",
+       "5  N:\\Stimuli\\2019-12-Evolutions\\2020-03-17-Alfa-...   \n",
+       "6  N:\\Stimuli\\2019-12-Evolutions\\2020-03-17-Alfa-...   \n",
+       "\n",
+       "                                            comments  Exp_collection  Expi  \\\n",
+       "0  001 RF MAPPER start at 1:27\\n2 degrees, lookin...             NaN   NaN   \n",
+       "1  002 Rf mapper start at 1:35. 0.75 degrees\\n5 c...             NaN   NaN   \n",
+       "2  003 Generate integrated start at 1:45\\nCh. 31,...             NaN   NaN   \n",
+       "3  004 generate integrated start at 200\\nCh 21, w...             NaN   NaN   \n",
+       "4  005 Start at 2:20\\nCh 21, whole ch, just hash ...             NaN   NaN   \n",
+       "5  006 start 2:40\\nCh 21\\n21 [0 -1.5] 4 1 'ZOHA_S...             NaN   NaN   \n",
+       "6  007 start at 302\\nCh 21 [0 -1.5] 4 1 'ZOHA_Sph...             NaN   NaN   \n",
+       "\n",
+       "   pref_chan  stim_size  \n",
+       "0        NaN        NaN  \n",
+       "1        NaN        NaN  \n",
+       "2        NaN        NaN  \n",
+       "3        NaN        NaN  \n",
+       "4        NaN        NaN  \n",
+       "5        NaN        NaN  \n",
+       "6        NaN        NaN  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
